--- a/Home.html
+++ b/Home.html
@@ -68,10 +68,10 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" style="background-color: #cf4a6b;color: White;"><b>Tin tức</b></a>
+                            <a class="nav-link" href="#" style="background-color: #cf4a6b;color: White;font-size: 18px"><b>Tin tức</b></a>
                         </li> 
                         <li class="nav-item">
-                            <a class="nav-link" href="#" style="background-color: #cf4a6b;color: White;"><b>Khuyến mại</b></a>
+                            <a class="nav-link" href="#" style="background-color: #cf4a6b;color: White;font-size: 18px"><b>Khuyến mại</b></a>
                         </li>
                     </ul>
                 </div>
