--- a/Minicake.html
+++ b/Minicake.html
@@ -144,7 +144,7 @@
       <section id="product-cards"    data-aos="fade-up"
       data-aos-duration="1500">
         <div class="container">
-            <h1>COOKIE</h1>
+            <h1>MINICAKE</h1>
             <div class="row" style="margin-top:50px;">
                <div class="col-md-3 py-3 py-md-0">
                 <div class="card">
@@ -153,9 +153,9 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
                     </div>
-                    <img src="./image/Cookie.png" alt="">
+                    <img src="./image/Socola 5.png" alt="">
                     <div class="card-body">
-                        <h3>Bánh lưỡi mèo</h3>
+                        <h3>Socola 5</h3>
                         <div class="star">
                           <i class="bx bxs-star checked"></i>
                           <i class="bx bxs-star checked"></i>
@@ -175,9 +175,9 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
                     </div>
-                    <img src="./image/Cookie1.png" alt="">
+                    <img src="./image/Socola 6.png" alt="">
                     <div class="card-body">
-                        <h3>Coconut - dừa</h3>
+                        <h3>Socola 6</h3>
                         <div class="star">
                           <i class="bx bxs-star checked"></i>
                           <i class="bx bxs-star checked"></i>
@@ -197,9 +197,9 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
                     </div>
-                    <img src="./image/Cookie2.png" alt="">
+                    <img src="./image/Socola trắng.png" alt="">
                     <div class="card-body">
-                        <h3>Red - Cookies</h3>
+                        <h3>Socola trắng</h3>
                         <div class="star">
                           <i class="bx bxs-star checked"></i>
                           <i class="bx bxs-star checked"></i>
@@ -208,7 +208,7 @@
                           <i class="bx bxs-star "></i>
                         </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                        <h6>45.000đ <span><button>Add Cart</button></span></h6>
+                        <h6>35.000đ <span><button>Add Cart</button></span></h6>
                     </div>
                 </div>
                </div>
@@ -219,9 +219,9 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
                     </div>
-                    <img src="./image/Cookie3.png" alt="">
+                    <img src="./image/Tiramisu.png" alt="">
                     <div class="card-body">
-                        <h3>Coconut choco</h3>
+                        <h3>Moussetiramisu</h3>
                         <div class="star">
                           <i class="bx bxs-star checked"></i>
                           <i class="bx bxs-star checked"></i>
@@ -230,7 +230,7 @@
                           <i class="bx bxs-star checked"></i>
                         </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                        <h6>35.000đ <span><button>Add Cart</button></span></h6>
+                        <h6>40.000đ <span><button>Add Cart</button></span></h6>
                     </div>
                 </div>
                </div>
@@ -250,31 +250,9 @@
                          <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
                          <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
                      </div>
-                     <img src="./image/Cookie4.png" alt="">
+                     <img src="./image/Đào.png" alt="">
                      <div class="card-body">
-                         <h3>Cigarettes</h3>
-                         <div class="star">
-                           <i class="bx bxs-star checked"></i>
-                           <i class="bx bxs-star checked"></i>
-                           <i class="bx bxs-star checked"></i>
-                           <i class="bx bxs-star "></i>
-                           <i class="bx bxs-star "></i>
-                         </div>
-                         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                         <h6>30.000đ <span><button>Add Cart</button></span></h6>
-                     </div>
-                 </div>
-                </div>
-                <div class="col-md-3 py-3 py-md-0">
-                 <div class="card">
-                     <div class="overlay">
-                         <button type="button" class="btn btn-secondary" title="Quick View"><i><img src="./image/views.png" alt="" width="30px"></i></button>
-                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
-                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
-                     </div>
-                     <img src="./image/Cookie5.png" alt="">
-                     <div class="card-body">
-                         <h3>Tuile Almond</h3>
+                         <h3>Mousse đào</h3>
                          <div class="star">
                            <i class="bx bxs-star checked"></i>
                            <i class="bx bxs-star checked"></i>
@@ -294,18 +272,18 @@
                          <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
                          <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
                      </div>
-                     <img src="./image/Cookie6.png" alt="">
+                     <img src="./image/Mâm sôi.png" alt="">
                      <div class="card-body">
-                         <h3>Palmier</h3>
+                         <h3>Mousse mâmsôi</h3>
                          <div class="star">
                            <i class="bx bxs-star checked"></i>
                            <i class="bx bxs-star checked"></i>
                            <i class="bx bxs-star checked"></i>
-                           <i class="bx bxs-star checked"></i>
+                           <i class="bx bxs-star "></i>
                            <i class="bx bxs-star "></i>
                          </div>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                         <h6>50.000đ <span><button>Add Cart</button></span></h6>
+                         <h6>40.000đ <span><button>Add Cart</button></span></h6>
                      </div>
                  </div>
                 </div>
@@ -316,9 +294,31 @@
                          <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
                          <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
                      </div>
-                     <img src="./image/Cookie7.png" alt="">
+                     <img src="./image/Trứng muối.png" alt="">
                      <div class="card-body">
-                         <h3>Raisin nho</h3>
+                         <h3>Trứng muối</h3>
+                         <div class="star">
+                           <i class="bx bxs-star checked"></i>
+                           <i class="bx bxs-star checked"></i>
+                           <i class="bx bxs-star checked"></i>
+                           <i class="bx bxs-star checked"></i>
+                           <i class="bx bxs-star "></i>
+                         </div>
+                         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                         <h6>45.000đ <span><button>Add Cart</button></span></h6>
+                     </div>
+                 </div>
+                </div>
+                <div class="col-md-3 py-3 py-md-0">
+                 <div class="card">
+                     <div class="overlay">
+                         <button type="button" class="btn btn-secondary" title="Quick View"><i><img src="./image/views.png" alt="" width="30px"></i></button>
+                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i><img src="./image/heart.png" alt="" width="30px"></i></button>
+                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i><img src="./image/add.png" alt="" width="30px"></i></button>
+                     </div>
+                     <img src="./image/Sudai kem.png" alt="">
+                     <div class="card-body">
+                         <h3>Sudai kem</h3>
                          <div class="star">
                            <i class="bx bxs-star checked"></i>
                            <i class="bx bxs-star checked"></i>
